# git-journal

./: .gitignore  .gitjournal.toml  .gitmessage  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  _git-journal  appveyor.yml  git-journal.bash-completion  git-journal.fish  index.html  search-index.js
.github/: dependabot.yml
benches/: bench.rs  parser.rs
gitjournal/: GitJournal.t.html  index.html  sidebar-items.js  struct.GitJournal.html
gitjournal/config/: index.html  sidebar-items.js  struct.Config.html
gitjournal/errors/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
implementors/collections/borrow/: trait.ToOwned.js
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.Pointer.js  trait.Write.js
implementors/core/hash/: trait.BuildHasher.js  trait.Hash.js  trait.Hasher.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/iter/traits/: trait.DoubleEndedIterator.js  trait.ExactSizeIterator.js  trait.Extend.js  trait.FromIterator.js  trait.FusedIterator.js  trait.IntoIterator.js  trait.Sum.js  trait.TrustedLen.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/ops/: trait.Add.js  trait.AddAssign.js  trait.BitAnd.js  trait.BitAndAssign.js  trait.BitOr.js  trait.BitOrAssign.js  trait.BitXor.js  trait.BitXorAssign.js  trait.BoxPlace.js  trait.Boxed.js  trait.CoerceUnsized.js  trait.Deref.js  trait.DerefMut.js  trait.Div.js  trait.DivAssign.js  trait.Drop.js  trait.FnOnce.js  trait.InPlace.js  trait.Index.js  trait.IndexMut.js  trait.Mul.js  trait.MulAssign.js  trait.Neg.js  trait.Not.js  trait.Place.js  trait.Placer.js  trait.Sub.js  trait.SubAssign.js
implementors/core/slice/: trait.SliceExt.js
implementors/core/str/: trait.FromStr.js
implementors/core/str/pattern/: trait.Pattern.js
implementors/error_chain/: trait.ChainedError.js
implementors/log/: trait.Log.js
implementors/num_traits/cast/: trait.FromPrimitive.js
implementors/serde/de/: trait.Deserialize.js  trait.Deserializer.js  trait.Error.js
implementors/serde/ser/: trait.Error.js  trait.Serialize.js  trait.Serializer.js
implementors/std/error/: trait.Error.js
implementors/std/io/: trait.Write.js
implementors/std/net/addr/: trait.ToSocketAddrs.js
implementors/std/panic/: trait.UnwindSafe.js
rfc/: 0000-template.md  0001-commit-msg.md  0002-output-templating.md
src/: cli.yaml  config.rs  errors.rs  lib.rs  logger.rs  macros.rs  main.rs  output.rs  parser.rs
src/gitjournal/: config.rs.html  errors.rs.html  lib.rs.html  parser.rs.html
tests/: NEW_COMMIT  commit_msg  invalid_1.toml  invalid_2.toml  invalid_3.toml  template.toml  verify.rs
tests/commit_messages/: failure_1  failure_3  failure_4  failure_5  failure_6  prepare_2  prepare_3  prepare_4  success_1  success_2  success_3  success_4  success_huge
