[package]
name = "git-journal"
version = "1.8.1"
license = "MIT"
readme = "README.md"
keywords = ["parser", "git", "log", "changelog", "journal"]
authors = ["Sascha Grunert <mail@saschagruenrt.de>"]
repository = "https://github.com/saschagrunert/git-journal"
homepage = "https://github.com/saschagrunert/git-journal"
documentation = "https://docs.rs/git-journal"
description = "The Git Commit Message and Changelog Generation Framework"
categories = ["command-line-utilities"]
edition = "2018"

[badges]
travis-ci = { repository = "saschagrunert/git-journal", branch = "master" }
appveyor = { repository = "saschagrunert/git-journal", branch = "master", service = "github" }

[lib]
name = "gitjournal"

[dependencies]
chrono = "0.4.11"
clap = { version = "2.33.0", features = ["yaml"] }
failure = "0.1.7"
git2 = "0.13.4"
lazy_static = "1.4.0"
log = "0.4.8"
mowl = "2.1.0"
nom = { version = "4.2.3", features = ["regexp_macros"] }
rayon = "1.3.0"
regex = "1.3.7"
serde = "1.0.106"
serde_derive = "1.0.106"
term = "0.6.1"
toml = "0.5.6"

[[bin]]
name = "git-journal"
path = "src/main.rs"
doc = false
